src/components/Nav/Nav.scss
@use "../../partials/variables" as vars;
@use "../../partials/mixins" as mx;

.nav {
	& {
		align-items: center;
		background: var(--background-nav-footer);
		box-shadow: var(--navFooter-box-shadow);
		display: flex;
		height: vars.$navHeight;
		position: fixed;
		transition: all 500ms ease-in-out;
		top: 0;
		width: 100%;
		z-index: 2;

		&.hide {
			margin-top: -5rem;
		}
	}

	&__content {
		align-items: center;
		display: flex;
		justify-content: center;
		height: 100%;
		max-width: vars.$ultraWide;
		padding-inline: 2rem;
		width: 100%;
	}

	&__logo-box {
		display: flex;
		align-items: center;
		justify-content: center;
		height: vars.$navHeight;
		width: 4rem;

		@media (min-width: vars.$tablet) {
		}
	}

	&__logo {
		fill: var(--text-color-bright);
		// fill: red;
		// height: 1.5rem;
		// height: 1.25rem;
		height: 1.2rem;
		height: 1.125rem;
		height: 1.1rem;
		height: 1.05rem;
		height: 1rem;
		margin-top: 4px;
		// height: 0.9rem;
		// height: 0.95rem;
		// border: 1px solid red;

		@media (min-width: vars.$largeTablet) {
			// height: 1rem;
			// height: 2rem;
			// height: 1.25rem;
		}
	}

	&__links {
		display: none;

		@media (min-width: vars.$tablet) {
			align-items: center;
			display: flex;
			gap: 2rem;
			height: 100%;
			margin-inline-start: auto;
		}
	}

	&__link {
		color: var(--text-color-bright);
		@include mx.navLink;

		&:hover {
			&::after {
				@include mx.afterAccent;
			}
		}
	}

	&__link.active {
		position: relative;

		&::after {
			@include mx.afterAccent;
		}
	}

	&__colorModeToggle {
		display: none;

		@media (min-width: vars.$tablet) {
			display: block;
			margin-inline-start: 1rem;
		}
	}

	&__logout {
		display: none;

		@media (min-width: vars.$tablet) {
			display: block;
		}
	}

	&__toggle-button {
		cursor: pointer;
		display: flex;
		flex-direction: column;
		gap: 0.45rem;
		height: 2.5rem;
		justify-content: center;
		position: absolute;
		right: 2rem;
		top: 0.9rem;
		width: 2rem;

		@media (min-width: vars.$tablet) {
			display: none;
		}
	}

	&__toggle-icon {
		border: 1.45px solid var(--text-color-bright);
		border-radius: 2px;
		min-width: 100%;
		width: 2rem;
	}
}

